PO Folder Created In Pages Folder

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,29 @@ body {
        }
    }
 }
+
+
+form {
+    width: 750px;
+    margin: 0 auto;
+}
+
+.mat-form-field {
+    display: block !important;
+    position: relative;
+    text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
