PO and Invoice with Pages Structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div class="form">
-    <div style="text-align:center">
-      <h1>
-        Registration Form
-      </h1>
-    </div>
-    <dynamic-form [fields]="regConfig" (submit)="submit($event)">
-    </dynamic-form>
-    <div class="margin-top">
-      {{ form.value | json }}
-    </div>
-  </div>
-  
+
+
+<a routerLink="pages/po" > Purchase Order </a>
+<a routerLink="pages/invoice" > Invoice </a>
+
+<div id="content">
+  <router-outlet></router-outlet>
+</div>
+
+
