Invoice Payment and Invoice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <a routerLink="pages/po" > Purchase Order </a>
 <a routerLink="pages/invoice" > Invoice </a>
+<a routerLink="pages/invoicePayment" > Invoice Payment </a>
 
 <div id="content">
   <router-outlet></router-outlet>
